--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nemoq.nqpossysv8" >
-
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <application
+        android:name=".V8Application"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -22,6 +25,11 @@
             android:label="@string/title_activity_main_ui"
             android:theme="@style/FullscreenTheme" >
         </activity>
-    </application>
 
+        <service
+            android:name=".NetworkHandling.NetworkService"
+            android:enabled="true"
+            android:exported="true" >
+        </service>
+    </application>
 </manifest>
