Ui för skriva ut testkölapp

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nemoq.nqpossysv8" >
+    package="com.nemoq.nqentityv8"
+    >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -8,15 +9,18 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <application
-        android:name=".V8Application"
+        android:name="com.nemoq.nqentityv8.V8Application"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
+        android:logo="@drawable/logo"
         >
         <activity
-            android:name=".UI.V8MainActivity"
-            android:label="@string/app_name" >
+            android:name="com.nemoq.nqentityv8.UI.V8MainActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTask"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,16 +29,16 @@
         </activity>
 
         <service
-            android:name=".NetworkHandling.NetworkService"
+            android:name="com.nemoq.nqentityv8.NetworkHandling.NetworkService"
             android:enabled="true"
             android:exported="true" >
         </service>
 
         <activity
-            android:name=".UI.SettingsActivity"
+            android:name="com.nemoq.nqentityv8.UI.SettingsActivity"
             android:label="@string/title_activity_settings" >
         </activity>
-        <receiver android:name=".BootBroadcastReceiver" android:enabled="true" android:exported="false">
+        <receiver android:name="com.nemoq.nqentityv8.BootBroadcastReceiver" android:enabled="true" android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
